[package]
name = "fastx-statistics"
description = "Compute simple statistics for fasta-like files"
authors = ["Sebastian Schmidt <sebastian.schmidt@helsinki.fi>"]
version = "0.2.0"
edition = "2021"
license = "BSD-2-Clause"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
seq_io = "0.4.0-alpha.0"
